# efl-app-tempalte

./: LICENSE  README.md  meson.build
include/: header.hpp
res/edc/: main.edc  meson.build
src/: main.cpp
